# label-with-snorkel

./: .gitignore  Label_with_Snorkel.ipynb  README.md  pyproject.toml
keywords/: Keywords - cleantech_categories.csv  Keywords - cleantech_funds.csv  Keywords - cleantech_keywords.csv  Keywords - cleantech_startups.csv  Keywords - cleantech_tags.csv  Keywords - notcleantech_categories.csv  Keywords - notcleantech_keywords.csv  Keywords - notcleantech_startups.csv  Keywords - notcleantech_tags.csv
scripts/: calc_count_stats.py  cleantech_stats.py  gensim_model.py  snorkel_helpers.py
tests/: test_label_with_snorkel.py
